tests/rosetta/out/Smalltalk/bernoulli-numbers.out
/tmp/bernoulli-numbers.st:6: parse error, expected ']'
