tests/rosetta/out/Smalltalk/bernoulli-numbers.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:50:28Z
"
| a b bernoulli denStr j m numStr |
bernoulli := [:n | a := {}.
m := 0.
[(m <= n)] whileTrue: [
  a := a copyWith: (1 / (m + 1)).
  j := m.
  [(j >= 1)] whileTrue: [
    a at: (j - 1) put: (j * (a at: (j - 1) - a at: j)).
    j := (j - 1).
  ]
  .
  m := (m + 1).
]
.
a at: 0 ].
0 to: 61 do: [:i |
  b := bernoulli value: i.
  ((num value: b ~= 0)) ifTrue: [
    numStr := (num value: b asString).
    denStr := (denom value: b asString).
    Transcript show: (((((('B(' + (i asString) at: "padStart" value: 2 value: ' ') + ') =') + numStr.padStart value: 45 value: ' ') + '/') + denStr)) printString; cr.
  ] .
]
.
